# wahlfach-matching

./: NewestPatternsWithoutSpanishExclusion.MD  PersonalINFO.md  README.md  generate_marketing_sales_ics.py  pyproject.toml
.github/workflows/: publish.yml
src/wahlfach_matching/: __init__.py  __main__.py  aggregator.py  cache.py  cli.py  combination_reporter.py  config.py  fetcher.py  ics_exporter.py  interactive.py  matcher.py  models.py  optimizer.py  reporter.py  scorer.py
tests/: test_aggregator.py  test_cache.py  test_cli.py  test_combination_reporter.py  test_exclusion_groups.py  test_interactive.py  test_optimizer.py  test_scorer.py  test_specific_dates.py  test_static_pattern_matching.py
