[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wahlfach-matching"
version = "0.1.0"
description = "CLI tool for scoring and matching elective courses against schedule constraints"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "mklemmingen" }]
keywords = ["timetable", "schedule", "elective", "matching", "university"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Environment :: Console",
]
dependencies = [
    "hsrt-timetable>=0.1.0",
    "icalendar>=7.0",
    "InquirerPy>=0.3.4",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
wahlfach-matching = "wahlfach_matching.cli:main"

[project.urls]
Homepage = "https://github.com/mklemmingen/wahlfach-matching"
Repository = "https://github.com/mklemmingen/wahlfach-matching"
Issues = "https://github.com/mklemmingen/wahlfach-matching/issues"

[tool.setuptools.packages.find]
where = ["src"]
